# Sleep

./: .gitignore  build.gradle.kts  module.bazel  settings.gradle.kts  tensorflow.bazelrc
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sleep_classifier.cpp  sleep_classifier.h
app/src/main/cpp/libs/include/tensorflow/: BUILD  workspace2.bzl
app/src/main/cpp/libs/include/tensorflow/lite/: CMakeLists.txt
app/src/main/java/com/example/sleep/: MainActivity.kt  SleepMusicItem.kt  SleepStageClassifier.kt
app/src/main/java/com/example/sleep/core/service/: SensorManagerWrapper.kt  SleepTrackingService.kt
app/src/main/java/com/example/sleep/core/util/: DateTimeUtils.kt  PermissionsUtils.kt  SleepStageCalculator.kt
app/src/main/java/com/example/sleep/data/mapper/: AccelerometerDataMapper.kt  NoiseDataMapper.kt  SleepGoalMapper.kt  SleepInterruptionMapper.kt  SleepScoreMapper.kt  SleepSessionMapper.kt  SleepStageMapper.kt
app/src/main/java/com/example/sleep/di/: DatabaseModule.kt  DispatcherModule.kt  IoDispatcher.kt  RepositoryModule.kt  SensorModule.kt  UseCaseModule.kt
app/src/main/java/com/example/sleep/domain/: InterruptionReason.kt  SleepStage.kt
app/src/main/java/com/example/sleep/domain/model/: NoiseData.kt  (+6 more)
app/src/main/python/: model_training.py  sleep_stage_model.keras  sleep_stage_model.tflite
app/src/main/res/drawable/: arrow_back.xml  ic_launcher_foreground.xml  loop.xml  report.xml  setting.xml  sleep.xml  timer.xml
app/src/main/res/values/: attrs.xml  strings.xml
gradle/: libs.versions.toml
(+43 files in other folders)
